--- a/Notes/main.tex
+++ b/Notes/main.tex
@@ -5,6 +5,7 @@
 \maketitle\newpage\tableofcontents\newpage
 % -------
 \input{sections/0}\newpage
-\input{sections/1}
+\input{sections/1}\newpage
+\input{sections/2}
 % -------
 \end{document} 
