--- a/Notes/sections/1.tex
+++ b/Notes/sections/1.tex
@@ -108,23 +108,8 @@ Stable: small change in initial data and the error is small.\par
     \item $E_n\thickapprox C^nE_0$则可由$C$的取值判断是否稳定。
 \end{itemize}
 \begin{defn}{Rates of Convergence}
-当$n\rightarrow\infty$，$\alpha_n\rightarrow\alpha$，$\beta_n\rightarrow 0$（与$n$的取值无关），则称$\alpha_n$是以$\beta_n$的速度收敛到$\alpha$的。
+当$n\rightarrow\infty$，$\alpha_n\rightarrow\alpha$，$\beta_n\rightarrow 0$，其中$\left|\alpha_n-\alpha\right|\leq k\left|\beta_n\right|$（与$n$的取值无关），则称$\alpha_n$是以$\beta_n$的速度收敛到$\alpha$的。
+\[
+\alpha_n\,=\,\alpha+o(\beta_n).
+\]
 \end{defn}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
