--- a/Notes/main.tex
+++ b/Notes/main.tex
@@ -7,6 +7,12 @@
 % \input{sections/0_Preface}\newpage
 % \input{sections/1_Error_Analysis}\newpage
 % \input{sections/2.3_Newton_method_and_its_extensions}
-\input{sections/2.4_Error_analysis_for)iterative_methods}
+% \input{sections/2.4_Error_analysis_for_iterative_methods}
+% \input{sections/3.1_Interpolation_and_the_lagrange_polynomial}
+% \input{sections/3.2_Data_approximation_and_nevilles_method}
+% \input{sections/3.3_Divided_differences}
+
+% \input{sections/5.1_The_elementary_theory_of_initial_value_problems}
+\input{sections/5.2_Eulers_method}
 % -------
 \end{document} 
