--- a/Notes/preamble.tex
+++ b/Notes/preamble.tex
@@ -22,7 +22,7 @@
     ntheorem        = true,%
     ]{theo}{定理}[section]
 % proof
-\newenvironment{proof}{{\heiti 【证明】\quad}}{\hfill$\square$}
+\newenvironment{proof}{{\textbf{[Proof]}\quad}}{\hfill$\square$}
 % equation label
 % \renewcommand{\theequation}{\arabic{section}.\arabic{equation}}
 \numberwithin{equation}{section}
