--- a/Notes/symbols.tex
+++ b/Notes/symbols.tex
@@ -2,4 +2,5 @@
 \def\partialD#1#2{\ensuremath{\frac{\partial{}#1}{\partial{}#2}}}
 \def\diff#1#2{\ensuremath{\frac{\D{}#1}{\D{}#2}}}
 \def\op{{\ooalign{$\bigcirc$\cr\hidewidth\small{op}\hidewidth\cr}}}
-\def\abs#1{\left|#1\right|}
+\def\abs#1{\left|#1\right|} 
+\def\D{\ensuremath{\mathrm{d}}}
