--- a/Notes/main.tex
+++ b/Notes/main.tex
@@ -11,11 +11,12 @@
 % \input{sections/3.1_Interpolation_and_the_lagrange_polynomial}
 % \input{sections/3.2_Data_approximation_and_nevilles_method}
 % \input{sections/3.3_Divided_differences}
+\input{sections/3.4_Hermite_interpolation}
 
-\input{sections/5.1_The_elementary_theory_of_initial_value_problems}
-\input{sections/5.2_Eulers_method}
-\input{sections/5.3_Higher-order_taylor_method}
-\input{sections/5.4_Runge-kutta_methods}
-\input{sections/5.5_Error_control_and_the_runge-kutta-fehlberg_method}
+% \input{sections/5.1_The_elementary_theory_of_initial_value_problems}
+% \input{sections/5.2_Eulers_method}
+% \input{sections/5.3_Higher-order_taylor_method}
+% \input{sections/5.4_Runge-kutta_methods}
+% \input{sections/5.5_Error_control_and_the_runge-kutta-fehlberg_method}
 % -------
 \end{document} 
