--- a/Notes/preamble.tex
+++ b/Notes/preamble.tex
@@ -1,5 +1,5 @@
 \usepackage{hdr}
-\usepackage{amsmath,ntheorem,amssymb,xfrac,listings,xcolor,enumerate,booktabs}
+\usepackage{amsmath,ntheorem,amssymb,xfrac,listings,xcolor,enumerate,booktabs,multirow}
 \usepackage[framemethod=tikz]{mdframed}
 \usetikzlibrary{shadows}
 % \usepackage{showkeys}
