--- a/Notes/main.tex
+++ b/Notes/main.tex
@@ -11,7 +11,8 @@
 % \input{sections/3.1_Interpolation_and_the_lagrange_polynomial}
 % \input{sections/3.2_Data_approximation_and_nevilles_method}
 % \input{sections/3.3_Divided_differences}
-\input{sections/3.4_Hermite_interpolation}
+% \input{sections/3.4_Hermite_interpolation}
+\input{sections/3.5_Cubic_spline_interpolation}
 
 % \input{sections/5.1_The_elementary_theory_of_initial_value_problems}
 % \input{sections/5.2_Eulers_method}
