--- a/Notes/main.tex
+++ b/Notes/main.tex
@@ -13,12 +13,17 @@
 % \input{sections/3.3_Divided_differences}
 % \input{sections/3.4_Hermite_interpolation}
 % \input{sections/3.5_Cubic_spline_interpolation}
-\input{sections/4.1_Numerical_ifferentiation}
+% \input{sections/4.1_Numerical_ifferentiation}
 
 % \input{sections/5.1_The_elementary_theory_of_initial_value_problems}
 % \input{sections/5.2_Eulers_method}
 % \input{sections/5.3_Higher-order_taylor_method}
 % \input{sections/5.4_Runge-kutta_methods}
 % \input{sections/5.5_Error_control_and_the_runge-kutta-fehlberg_method}
+% \input{sections/5.6_Multistep_method}
+% \input{sections/6.1.2_Linear_systems_of_equations_Pivoting_strategies}
+% \input{sections/6.5_Matrix_factorization}
+% \input{sections/7.1_Norms_of_vectors_and_matrices}
+\input{sections/7.2_Eigenvalues-and_eigenvectors}
 % -------
 \end{document} 
