--- a/Notes/symbols.tex
+++ b/Notes/symbols.tex
@@ -3,4 +3,12 @@
 \def\diff#1#2{\ensuremath{\frac{\D{}#1}{\D{}#2}}}
 \def\op{{\ooalign{$\bigcirc$\cr\hidewidth\small{op}\hidewidth\cr}}}
 \def\abs#1{\left|#1\right|}
-\def\D{\ensuremath{\mathrm{d}}} 
+\def\D{\ensuremath{\mathrm{d}}}
+\def\norms#1{\ensuremath{\|#1\|}}
+
+% symbols
+\def\bfx{\ensuremath{\bf x}}
+\def\bfy{\ensuremath{\bf y}}
+\def\bfA{\ensuremath{\bf A}}
+\def\bfB{\ensuremath{\bf B}}
+\def\RR{\ensuremath{\mathbb{R}}} 
