--- a/Notes/sections/3.1_Interpolation_and_the_lagrange_polynomial.tex
+++ b/Notes/sections/3.1_Interpolation_and_the_lagrange_polynomial.tex
@@ -5,7 +5,7 @@ $f\in C[a,b]$, $\forall$ polynomial $P(x)$, s.t. $\left|f(x)-P(x)\right|<\epsilo
 \end{theo}
 
 \begin{theo}[$n$th Lagrange Interpolating Polynomial]
-$x_0,x_1,\ldots,x_n$ are $n+1$ distinct numbers, then a unique polynomial $P(x)$ of degree at most $n$ exists with
+$x_0,\ldots,x_n$ are $n+1$ distinct numbers, then a unique polynomial $P(x)$ of degree at most $n$ exists with
 \begin{align*}
   f(x_k)=P(x_k)\quad for\space k=0:n \\
   \begin{cases}
