--- a/Notes/hdr.sty
+++ b/Notes/hdr.sty
@@ -2,6 +2,7 @@
 \usepackage{tikzpagenodes}
 \usetikzlibrary{shapes.geometric}
 
+\setlength{\headheight}{15pt}
 \pagestyle{fancy}
 \fancyhf{}
 \renewcommand\headrulewidth{0pt}
