--- a/Notes/main.tex
+++ b/Notes/main.tex
@@ -1,7 +1,6 @@
 \documentclass[openany]{ctexbook}
 \input{preamble}
 \input{symbols}
-\addtocounter{chapter}{-1} % start from 0.
 \begin{document}
 \maketitle\newpage\tableofcontents\newpage
 % -------
@@ -24,6 +23,8 @@
 
 \chapter{Numerical Differentiation and Integration}
   \input{sections/4.1_Numerical_differentiation}
+  \input{sections/4.2_richardson_extrapolation}
+  \input{sections/4.3_Elements_of_numerical_integration.tex}
 
 \chapter{Initial-Value Problems for Ordinary Differential Equations}
   \input{sections/5.1_The_elementary_theory_of_initial_value_problems}
