--- a/Notes/preamble.tex
+++ b/Notes/preamble.tex
@@ -116,6 +116,8 @@
 \usepackage[linesnumbered,lined,boxed,commentsnumbered]{algorithm2e}
 % hyperref
 \usepackage[breaklinks,colorlinks,linkcolor=black,citecolor=black,urlcolor=black]{hyperref}
+% start from 0.
+\addtocounter{chapter}{-1} % start from 0.
 % logo
 \def\SUSTeX{%
   S\kern-.13em\relax%
