--- a/Notes/main.tex
+++ b/Notes/main.tex
@@ -25,6 +25,7 @@
   \input{sections/4.1_Numerical_differentiation}
   \input{sections/4.2_richardson_extrapolation}
   \input{sections/4.3_Elements_of_numerical_integration.tex}
+  \input{sections/4.4_Composite_numerical_integration}
 
 \chapter{Initial-Value Problems for Ordinary Differential Equations}
   \input{sections/5.1_The_elementary_theory_of_initial_value_problems}
