--- a/Notes/main.tex
+++ b/Notes/main.tex
@@ -4,6 +4,7 @@
 \begin{document}
 \maketitle\newpage\tableofcontents\newpage
 % -------
+
 \chapter{Preface}
   \input{sections/0_Preface}\newpage
 
@@ -26,6 +27,8 @@
   \input{sections/4.2_richardson_extrapolation}
   \input{sections/4.3_Elements_of_numerical_integration.tex}
   \input{sections/4.4_Composite_numerical_integration}
+  \input{sections/4.5_Romberg_integration}
+  \input{sections/4.7_Gaussian_quadrature}
 
 \chapter{Initial-Value Problems for Ordinary Differential Equations}
   \input{sections/5.1_The_elementary_theory_of_initial_value_problems}
