--- a/Notes/sections/7.2_Eigenvalues-and_eigenvectors.tex
+++ b/Notes/sections/7.2_Eigenvalues-and_eigenvectors.tex
@@ -13,7 +13,9 @@ The \emph{spectral radius} $\rho(\bfA)$ of a matrix $\bfA$ is defined by
 \begin{theo}
 If $\bfA$ is an $n\times n$ matrix, then
 \begin{enumerate}[(i)]
+    \item $\norms{\bfA}_1=\max_j\sum_{i=1}^{n}\abs{a_{ij}}$,(列和最大)
     \item $\norms{\bfA}_2=\left[\rho(A^tA)\right]^{1/2}$,
+    \item $\norms{\bfA}_\infty=\max_i\sum_{j=1}^{n}\abs{a_{ij}}$,(行和最大)
     \item $\rho(\bfA)\leq\norms{\bfA}$, for any natural norm $\norms{\cdot}$.
 \end{enumerate}
 \end{theo}
