--- a/Notes/main.tex
+++ b/Notes/main.tex
@@ -46,6 +46,7 @@
   \input{sections/7.1_Norms_of_vectors_and_matrices}
   \input{sections/7.2_Eigenvalues-and_eigenvectors}
   \input{sections/7.3_The_jacobi_and_gauss-siedel_iterative_techniques}
+  \input{sections/7.5_Error_bounds_and_iterative_refinement}
 
 % -------
 \end{document}
