--- a/Notes/symbols.tex
+++ b/Notes/symbols.tex
@@ -7,8 +7,8 @@
 \def\norms#1{\ensuremath{\|#1\|}}
 
 % symbols
-\def\bfx{\ensuremath{\bf x}}
-\def\bfy{\ensuremath{\bf y}}
-\def\bfA{\ensuremath{\bf A}}
-\def\bfB{\ensuremath{\bf B}}
-\def\RR{\ensuremath{\mathbb{R}}} 
+\def\bfx{{\ensuremath{\bf x}}}
+\def\bfy{{\ensuremath{\bf y}}}
+\def\bfA{{\ensuremath{\bf A}}}
+\def\bfB{{\ensuremath{\bf B}}}
+\def\RR{\ensuremath{\mathbb{R}}}
