fix three-point midpoint formula

--- a/Notes/sections/4.1_Numerical_differentiation.tex
+++ b/Notes/sections/4.1_Numerical_differentiation.tex
@@ -31,7 +31,7 @@ If the nodes are equally spaced, $x_1=x_0+h$, $x_2=x_0+2h$, then
     \]
     \item Three-Point Midpoint Formula
     \[
-     f'(x_0) = \frac{1}{h}\left[-\frac{1}{2}f(x_0)+\frac{1}{2}f(x_0+2h)\right] - \frac{h^2}{6}f^{(3)}(\xi_2).
+     f'(x_0) = \frac{1}{h}\left[-\frac{1}{2}f(x_0-h)+\frac{1}{2}f(x_0+h)\right] - \frac{h^2}{6}f^{(3)}(\xi_2).
     \]
 \end{itemize}
 
